wv2 (0.4.0.dfsg-0.1) UNRELEASED; urgency=low

  * New upstream release.

  +++ Changes by Pino Toscano:

  * Bump SONAME.

 -- Ana Beatriz Guerrero Lopez <ana@debian.org>  Fri, 18 Sep 2009 16:28:19 +0200

wv2 (0.3.1.dfsg-1) unstable; urgency=low

  * Repack tarball and remove unlicesed documentation. Document this in
    Debian.README.
  * Update debian/copyright.

 -- Ana Beatriz Guerrero Lopez <ana@debian.org>  Fri, 07 Aug 2009 16:32:59 +0200

wv2 (0.3.1-1) unstable; urgency=low

  * New upstream release.
  * Remove patches: 
    - gcc_4.3_fixes, merged upstream. 
    - 05_relibtoolize.dpatch, 50_autogen.dpatch, 10_wv2-config_static.dpatch,
      obsolete.
    - remove quilt patching stuff.
  * Remove deprecated libstdc++-dev, it is being updated in build-essential.
  * Rename libwv2-1c2 -> libwv2-2.
  * Update to debhelper 6. 
  * Add Homepage field.
  * Update debian/copyright.
  * Update to Standards-Version: 3.8.2, no changes required.
  * Update uploaders, remove Isaac.

 -- Ana Beatriz Guerrero Lopez <ana@debian.org>  Fri, 07 Aug 2009 00:31:33 +0200

wv2 (0.2.3-2) unstable; urgency=low

  * Update Standards-Version to 3.7.3.
  * Update uploaders.
  * Move patch system to quilt.
  * Add gcc_4.3_fixes to fix problems with GCC 4.3. This patch adds a missing
    include and hack away the #warning stuff.  (Closes: #441614)
  * Replace  ${source:Version}) with (= ${binary:Version}) to make package 
    binNMUable.

 -- Ana Beatriz Guerrero Lopez <ana@debian.org>  Wed, 26 Dec 2007 08:32:36 +0100

wv2 (0.2.3-1) unstable; urgency=low

  * New upstream release.

  +++ Changes by Christopher Martin:

  * Drop the libwv2.la file from libwv2-dev, at the request of
    J.H.M. Dassen (Ray). (Closes: #374332)

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 18 Jun 2006 15:28:58 -0400

wv2 (0.2.2-6) unstable; urgency=medium

  +++ Changes by Christopher Martin:

  * Add a patch which fixes CVE-2006-2197, missing boundary checks which could