@@ -3,92 +3,5 @@
 # Uncomment this to turn on verbose mode.
 #export DH_VERBOSE=1
 
-# These are used for cross-compiling and for saving the configure script
-# from having to guess our platform (since we know it already)
-DEB_HOST_GNU_TYPE   ?= $(shell dpkg-architecture -qDEB_HOST_GNU_TYPE)
-DEB_BUILD_GNU_TYPE  ?= $(shell dpkg-architecture -qDEB_BUILD_GNU_TYPE)
-
-OPTFLAGS = -Wall -g
-
-ifneq (,$(findstring noopt,$(DEB_BUILD_OPTIONS)))
-	OPTFLAGS += -O0
-else
-	OPTFLAGS += -O2
-endif
-
-ifeq (,$(findstring nostrip,$(DEB_BUILD_OPTIONS)))
-	INSTALL_PROGRAM += -s
-endif
-
-configure: configure-stamp
-configure-stamp: 
-	dh_testdir
-
-	# Add here commands to configure the package.
-	CFLAGS="$(OPTFLAGS)" CXXFLAGS="$(OPTFLAGS)" ./configure \
-	--host=$(DEB_HOST_GNU_TYPE) --build=$(DEB_BUILD_GNU_TYPE) \
-	--disable-debug \
-	--prefix=/usr --mandir=\$${prefix}/share/man --infodir=\$${prefix}/share/info
-
-	touch configure-stamp
-
-build: build-stamp
-build-stamp: configure-stamp
-	dh_testdir
-
-	$(MAKE)
-
-	touch build-stamp
-
-clean: 
-	dh_testdir
-	dh_testroot
-	rm -f build-stamp configure-stamp patch-stamp
-	[ ! -f Makefile ] || $(MAKE) distclean
-
-	dh_clean
-
-install: build
-	dh_testdir
-	dh_testroot
-	dh_clean -k
-	dh_installdirs
-
-	$(MAKE) install DESTDIR=$(CURDIR)/debian/tmp
-
-	dh_movefiles
-
-binary-indep: build install
-
-binary-arch: build install
-	dh_testdir
-	dh_testroot
-	dh_installchangelogs ChangeLog
-	dh_installdocs
-
-	# Fix up the documentation directory for the -dev package.
-#	rm -rf `find debian/libwv2-dev/usr/share/doc/libwv2-dev/doc \
-#		-name CVS -type d`
-#	rm -f `find debian/libwv2-dev/usr/share/doc/libwv2-dev/doc \
-#		-name .cvsignore -type f`
-#	mv debian/libwv2-dev/usr/share/doc/libwv2-dev/doc \
-#		debian/libwv2-dev/usr/share/doc/libwv2-dev/design
-
-	dh_installexamples
-	dh_installman
-	dh_installmenu
-	dh_installinfo
-	dh_strip
-	dh_link
-	dh_compress -X.css -X.docbook -X.bz2
-	dh_fixperms
-	dh_makeshlibs -V
-	dh_installdeb
-	dh_perl
-	dh_shlibdeps
-	dh_gencontrol
-	dh_md5sums
-	dh_builddeb
-
-binary: binary-indep binary-arch
-.PHONY: build clean binary-indep binary-arch binary install 
+%:
+	dh $@
